--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>rCounter</title>
+	<title>lifeR</title>
 	<link href="core/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
