--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
 	<title>lifeR</title>
 
+	<!-- iOS Meta Data -->
 	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="viewport" content="initial-scale=2.0, user-scalable=no">
+	<meta name="format-detection" content="telephone=no">
 
 	<link href="core/core.css" rel="stylesheet" type="text/css">
 
